force-app/main/default/objects/Quote/fields/fw2__Entity__c.field-meta.xml
<CustomField>
    <fullName>fw2__Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity</label>
    <referenceTo>fw1__Entity__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>