force-app/main/default/objects/Quote/fields/fw2__Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>fw2__Payment_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Plan</label>
    <referenceTo>fw1__Payment_Plan__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>